--- a/static/index.html
+++ b/static/index.html
@@ -70,7 +70,7 @@
         <td id="currentWater" style="height: 2em">Loading...</td>
       </tr>
     </table>
-    <p style="font-size: 1.5em; margin: 10px">*Data will be checked every 10 seconds.</p>
+    <p style="font-size: 1.5em; margin: 10px">*Data will be fetch every 10 seconds.</p>
     <p style="font-size: 1.5em; margin: 10px">*Data updated on server every 15 second.</p>
     <p id="status" style="font-size: 1.5em; margin: 10px">Waiting...</p>
     <p id="timestamp" style="font-size: 1.5em; margin: 10px">Last Update: ...</p>
